namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: dev-llm
