deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: fast-api-backend
  name: fast-api-backend
  namespace: dev-llm
spec:
  selector:
    matchLabels:
      app: fast-api-backend
  template:
    metadata:
      labels:
        app: fast-api-backend
    spec:
      nodeSelector:
        node: gpu-node-pool
      containers:
      - image: asia-south1-docker.pkg.dev/xplor-sunbird-rc/dev-llm/xplor-llm-services:latest
        imagePullPolicy: Always
        name: fast-api-backend
        resources:
          requests:
            cpu: "2000m"
            memory: "13000Mi"
          limits:
            cpu: "2000m" 
            memory: "13000Mi"
        ports:
        - containerPort: 8000
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /healthcheck
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /healthcheck
            port: 8000
          initialDelaySeconds: 20
          periodSeconds: 10
      tolerations:
      - key: "nvidia.com/gpu"
        operator: "Exists"
        effect: "NoSchedule"

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ollama-backend
  name: ollama-backend
  namespace: dev-llm
spec:
  selector:
    matchLabels:
      app: ollama-backend
  template:
    metadata:
      labels:
        app: ollama-backend
    spec:
      nodeSelector:
        node: gpu-node-pool
      containers:
      - image: asia-south1-docker.pkg.dev/xplor-sunbird-rc/dev-llm/xplor-llm-services:latest
        imagePullPolicy: Always
        name: ollama-backend
        resources:
          requests:
            cpu: "2000m"
            memory: "13000Mi"
          limits:
            cpu: "2000m" 
            memory: "13000Mi"
        ports:
        - containerPort: 8000
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /healthcheck
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /healthcheck
            port: 8000
          initialDelaySeconds: 20
          periodSeconds: 10
      tolerations:
      - key: "nvidia.com/gpu"
        operator: "Exists"
        effect: "NoSchedule"

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fast-api-backend
  name: fast-api-svc
  namespace: dev-llm
spec:
  ports:
  - port: 5000
    targetPort: 8000
    protocol: TCP
  selector:
    app: fast-api-backend
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ollama-backend
  name: ollama-svc
  namespace: dev-llm
spec:
  ports:
  - port: 5000
    targetPort: 8000
    protocol: TCP
  selector:
    app: ollama-backend
  type: NodePort
